--- a/web/composer.json
+++ b/web/composer.json
@@ -9,6 +9,7 @@
     "require": {
         "mpdf/mpdf": "^8.0",
         "chillerlan/php-qrcode": "^3.2",
-        "openboleto/openboleto": "dev-master"
+        "openboleto/openboleto": "dev-master",
+        "benhall14/php-calendar": "^1.2"
     }
 }
